Refactor visibility check logic in Paths.java
Refactor `defVisible` logic, add detailed comments, and introduce helper methods to improve readability and maintainability. Also, include documentation for endpoint strategy in FciOrient.java.